Enhance button functionality to smoothly scroll to features section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="hero-text">
       <h1 class="hero-headline">Revolutionizing Prosthetics with Advanced Bionic Technology</h1>
       <p class="hero-subtitle">Experience the future of mobility with our state-of-the-art bionic prosthetic arm.</p>
-      <button>Explore Features</button>
+      <button onclick="document.getElementById('features').scrollIntoView({ behavior: 'smooth' });">Explore Features</button>
     </div>
     <div class="hero-image">
       <img src="bionic.png" alt="Bionic Prosthetic Arm" width="550px" style="padding-bottom: 190px;">
