--- a/about.html
+++ b/about.html
@@ -49,6 +49,7 @@
         nav {
   font-family:"Exo 2";
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   background-color: white;
@@ -67,6 +68,7 @@ nav .logo {
 nav ul {
   list-style: none;
   display: flex;
+  justify-content: space-around;
   margin: 0;
   padding: 0;
   padding-right: 20px;
@@ -80,7 +82,7 @@ nav ul li a {
   color: black;
   text-decoration: none;
   font-size: 1rem;
-  padding: 5px 10px;
+  padding: 5px 20px;
   transition: all 0.3s ease;
 }
 nav ul li a:hover {
@@ -114,7 +116,7 @@ nav ul li a:hover {
         background-size: 100% 2px;
         background-repeat: no-repeat;
         background-position: 0 100%;
-    }
+       }
         p {
             font-family: "Inter";
             line-height: 1.6;
